115_kraken: Fixed issue on iphone where tabs had an outline
Merge branch '115_kraken' into 'main'

Reviewed by 
Approved by 

Description
https://trello.com/c/p3FhKjoC

Tabs on profile page had an outline on iphone, this has been removed.

Branch commits
* Fixed issue on iphone where tabs had an outline

--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -10,7 +10,6 @@
     width: 100%;
     height: 38px;
     background-color: white;
-    outline: 1px solid black;
     white-space: nowrap;
 }
 
